# raster-to-plotter-svg

./: .gitignore  FEATURES.md  LICENSE  README.md  plotter.py  pyproject.toml  start-macos.command  start-studio.bat  start-studio.command  start-windows.bat
bridge/: README.md  com.idraw.bridge.plist  com.idraw.ping.plist  idraw-bridge.sh  idraw-serial.service  patch-idraw-extension.py
cavalry/: plotter-bridge.js
docs/: cavalry-tessellations.md  product-roadmap.md
engine/: __init__.py  accel.py  canvas.py  chain.py  composition.py  generate.py  genframe.py  geometry.py  growth.py  hlr.py  layer_clip.py  params.py  project.py  regions.py  sampling.py  shape_library.py  styles.py  svg_io.py  tessellation.py  tessellation_library.py  tessellation_patterns.py
frontend/: .gitignore  index.html  package-lock.json  package.json
legacy/: README.md  main.py  stipple.py  svg_export.py
profiling/: __init__.py  environment.py  gpu.py  model.py  playwright.py  worker.py  workload.py
tests/: test_cavalry_bridge.py  test_chain.py  test_composition.py  test_draft.py  test_env_check.py  test_environment_contracts.py  test_event_stream.py  test_frontend_contracts.py  test_generate_crop.py  test_generate_pens.py  test_gpu_launch.py  test_growth.py  test_hlr.py  test_image_api.py  test_multipen_plot.py  test_plot_estimate.py  test_plot_job.py  test_plot_merge.py  test_plot_preview.py  test_plot_progress.py  test_plotter_settings.py  test_projects.py  test_quadtree.py  test_raster_layer.py  test_regions.py  test_reorder.py  test_reordering.py  test_shape_api.py  test_versions.py  (+6 more)
(+176 files in other folders)
