[project]
name = "plotterforge"
version = "1.0.0"
description = "Turn raster images and procedural drawings into layered, plotter-ready SVG — then preview and plot them on a multi-pen plotter"
requires-python = ">=3.13,<3.14"
dependencies = [
    "customtkinter>=5.2.2",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "svgwrite>=1.4.3",
    "flask>=3.0",
    "pyserial>=3.5",
    "svgelements>=1.8",
    "scipy>=1.13",
    "scikit-image>=0.24",
    "opencv-python-headless>=4.10",
    "shapely>=2.0",
]

[project.optional-dependencies]
cuda = [
    "torch>=2.6,<2.7",
    "torchvision>=0.21,<0.22",
]
mps = [
    "torch>=2.6,<2.7",
    "torchvision>=0.21,<0.22",
]
sam2 = [
    "sam-2",
    "setuptools>=61",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.uv]
conflicts = [
    [
        { extra = "cuda" },
        { extra = "mps" },
    ],
]
no-build-isolation-package = ["sam-2"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", extra = "cuda", marker = "sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu124", extra = "cuda", marker = "sys_platform == 'win32'" },
]
sam-2 = { git = "https://github.com/facebookresearch/sam2.git", rev = "2b90b9f5ceec907a1c18123530e92e794ad901a4" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
